# lemmatize

./: .gitignore  Dockerfile  README.md  catsrc.sh  db.py  dummy.txt  main.py  models.py  pyproject.toml  requirements.txt  security.py  test_auth.py  test_lemmatizer.py  test_main.py  turtles_forever.json  utils.py
routers/: auth.py  bard.py  lemmatizer.py  lexicography.py  user.py  users.py
static/: index.html
tests/: .env.test  conftest.py  test_auth.py  test_lemmatizer.py  test_lexicography.py  test_user.py  test_users.py
